--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ SERVER_PORT = 3000
 
 POSTGRES_HOST = localhost
 POSTGRES_PORT = 5432
-POSTGRES_DB = postgres
+POSTGRES_DB = auth_db
 POSTGRES_USER = postgres
 POSTGRES_PASSWORD = pass123
