--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-NODE_ENV= development
-DEBUG= true
-SERVER_PORT = 3030
+NODE_ENV=development
+DEBUG=true
+SERVER_PORT=3030
+APP_SECRET=itsverysecret
+JWT_SECRET=itsverysecret
+JWT_EXPIRE=3600
 
 POSTGRES_HOST = localhost
 POSTGRES_PORT = 5432
